Fixing the flickering problem - should be usable now

--- a/static/style.css
+++ b/static/style.css
@@ -1207,6 +1207,7 @@ ul > li > span:hover + .sword {
 
 #chest:hover > #inventory_display {
     opacity: 1;
+    display: block;
 }
 
 /* triangle at the bottom of the bubble */
